syntax = "proto3";

package rpc;

import "google/protobuf/struct.proto";

option go_package = "github.com/stripe/stripe-cli/rpc";

message EventsResendRequest {
  // The ID of the event to resend.
  string event_id = 1;

  // Resend the event to the given Stripe account. This is useful when testing a Connect platform.
  string account = 2;

  // Additional data to send with an API request. Supports setting nested values
  // (e.g nested[param]=value).
  repeated string data = 3;

  // Response attributes to expand inline (target nested values with nested[param]=value).
  repeated string expand = 4;

  // Set an idempotency key for the request, preventing the same request from replaying within 24
  // hours.
  string idempotency = 5;

  // Make a live request (by default, runs in test mode).
  bool live = 6;

  // Specify the Stripe account to use for this request.
  string stripe_account = 7;

  // Specify the Stripe API version to use for this request.
  string version = 8;

  // Resend the event to the given webhook endpoint ID.
  string webhook_endpoint = 9;
}

message EventsResendResponse {
  message Request {
    // ID of the API request that caused the event. If null, the event was automatic (e.g., Stripe’s
    // automatic subscription handling). Request logs are available in the dashboard, but currently
    // not in the API.
    string id = 1;

    // The idempotency key transmitted during the request, if any. Note: This property is populated
    // only for events on or after May 23, 2017.
    string idempotency_key = 2;
  }

  // Unique identifier for the object.
  string id = 1;

  // The Stripe API version used to render `data`. Note: This property is populated only for events
  // on or after October 31, 2014.
  string api_version = 2;

  // Object containing data associated with the event.
  google.protobuf.Struct data = 3;

  // Information on the API request that instigated the event.
  Request request = 4;

  // Description of the event (e.g., invoice.created or charge.refunded).
  string type = 5;

  // *CONNECT ONLY* The connected account that originated the event.
  string account = 6;

  // Time at which the object was created. Measured in seconds since the Unix epoch.
  int64 created = 7;

  // Has the value true if the object exists in live mode or the value false if the object exists in test mode.
  bool livemode = 8;

  // Number of webhooks that have yet to be successfully delivered (i.e., to return a 20x response)
  // to the URLs you’ve specified.
  int64 pending_webhooks = 9;
}
